Calc: Fix header colors when on a sheet view
Before this commit
- the text color in selected header was hard to read
- the header border color was very crude, it should be subtle
- On dark mode it was too bright the color for the headers

Note: I have renamed the --color-text-light - that was introduced for
the headers when on sheetview - to --color-text-calc-header

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -13,7 +13,7 @@
 	--color-text-dark: #333333; /* select */
 	--color-text-darker: #000; /* hover */
 	--color-text-lighter: #696969; /* secondard text, disabled */
-	--color-text-light: #e8e8e8;
+	--color-text-calc-header: #e8e8e8;
 	--color-status-badge: #616161;
 	--color-slideshow: #a8a8a8;
 
@@ -68,7 +68,9 @@
 	--color-calc-header-sheetview-unsynced: #500000;
 
 	--color-text-calc-header-selected: var(--color-text-darker);
+	--color-text-calc-header-sheetview-selected: #fff;
 	--color-border-calc-header: #c0c0c0;
+	--color-border-calc-header-sheetview: #333;
 
 	--color-calc-comment: #BF819E;
 	--column-row-highlight: #CCFFFF;
